# gitgalaxy

./: .flake8  .galaxyscope.yaml  .gitignore  .gitlab-ci.yml  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  action.yml  apollo11_scan.cast  app.py  azure-pipelines.yml  bitbucket-pipelines.yml  cd pipeline strategy.md  cure_dead_ends.py  github-action-readme.md  index.html  mkdocs.yml  muninn.yml  museum  pyproject.toml  regex_hits.csv  regex_hits_table.md  sitemap.xml  zizmor.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
01-01-project-overview/: index.html
01-02-galaxyscope-cli-reference/: index.html
01-03-the-blast-paradigm/: index.html
01-04-the-legacy-bridge/: index.html
01-06-the-structural-rag-graph/: index.html
01-07-the-shbom-standard/: index.html
01-08-autonomous-ai-guardrails/: index.html
01-09-the-continuous-delta-paradigm/: index.html
02-01-pipeline-overview/: index.html
02-02-optical-orchestration/: index.html
02-03-aperture-filter/: index.html
02-04-guidestar-protocol/: index.html
02-05-language-lens/: index.html
02-06-security-lens/: index.html
02-07-the-prism/: index.html
02-08-the-detector/: index.html
02-09-signal-processing/: index.html
02-11-spectral-audit/: index.html
02-12-audit-recorder/: index.html
02-13-gpu-recorder/: index.html
02-14-llm-recorder/: index.html
02-15-chronometer/: index.html
02-16-network-risk-sensor/: index.html
02-17-ai-appsec-sensor/: index.html
02-18-dev-agent-firewall/: index.html
02-19-neural-auditor/: index.html
02-20-security-auditor/: index.html
02-21-record-keeper/: index.html
02-22-state-rehydrator/: index.html
03-01-claim-1-search-strategies/: index.html
03-02-claim-2-explicitness/: index.html
03-03-claim-3-taxonomy-map/: index.html
03-04-claim-4-comparing-languages/: index.html
03-05-claim-5-file-archetypes/: index.html
03-06-claim-6-keyword-fingerprinting/: index.html
03-07-claim-7-doom-comparisons/: index.html
03-08-claim-8-empirical-validation-of-ast-free-parsing/: index.html
03-09-claim-9-universal-logic-extraction/: index.html
03-10-claim-10-ast-vs-heuristic-parsing/: index.html
03-20-future-outlooks/: index.html
04-00-security_landscape/: index.html
04-01-full-api-network-map/: index.html
04-02-sbom-generator/: index.html
04-03-supply-chain-firewall/: index.html
04-04-vault-sentinel/: index.html
04-05-binary-anomaly-detector/: index.html
04-06-pii-leak-hunter/: index.html
04-07-terabyte-log-scanner/: index.html
05-01-legacy-refraction-controller/: index.html
05-02-spring-boot-scaffolding/: index.html
05-03-entity-and-memory-mapping/: index.html
05-04-api-and-service-contracts/: index.html
05-05-autonomous-agent-tickets/: index.html
05-06-batch-test-harness/: index.html
05-07-mainframe-compiler-forge/: index.html
05-08-dag-architect/: index.html
05-09-etl-unpacker/: index.html
05-10-graveyard-reaper/: index.html
05-11-jcl-meta-auditor/: index.html
05-12-zero-trust-jcl-forge/: index.html
05-13-lexical-patcher/: index.html
05-14-microservice-slicer/: index.html
05-15-cloud-schema-forge/: index.html
05-16-anomaly-agent-task-forge/: index.html
05-17-system-limits-reporter/: index.html
06-01-gitgalaxy-config/: index.html
06-02-language-standards/: index.html
06-03-analysis-lens/: index.html
07-01-code-complexity/: index.html
07-02-stars-size/: index.html
07-03-stars-pulse-rate/: index.html
07-04-stars-shape/: index.html
07-05-satellite-unit/: index.html
07-06-satellite-orbital-distance/: index.html
07-07-number-of-satellites/: index.html
07-08-relative-positioning/: index.html
07-09-node-size/: index.html
07-10-planetary-rings/: index.html
07-11-sequence-affinity/: index.html
07-12-misc-equations/: index.html
08-01-methodology/: index.html
08-02-sub-equations/: index.html
08-03-transforming-regex-counts/: index.html
08-04-ownership-entropy/: index.html
08-05-cognitive-load/: index.html
08-06-deep-churn/: index.html
08-07-structural-fortification/: index.html
08-08-technical-debt/: index.html
08-09-documentation-risk/: index.html
08-10-file-stability/: index.html
08-11-test-coverage/: index.html
08-12-civil-war/: index.html
08-13-graveyard-detector/: index.html
08-14-api-exposure/: index.html
08-15-concurrency-exposure/: index.html
08-16-state-flux-exposure/: index.html
08-18-specification-alignment/: index.html
08-19-obscured-payload-exposure/: index.html
08-20-logic-bomb-exposure/: index.html
08-21-injection-surface-exposure/: index.html
08-22-memory-corruption-exposure/: index.html
08-23-hardcoded-secrets-exposure/: index.html
08-24-Big-O-Detection/: index.html
agents/: index.html
airgap_observatory/: index.html  main.js
backend/: aperture.py  assess_galaxy.py  audit_recorder.py  audit_the_audit.py  cartographer.py  chronometer.py  collision_finder.py  detector.py  find_function_funk.py  functionnametest.py  galaxy_printer.py  galaxyscope.py  gitgalaxy_standards_v011.py  gpu_recorder.py  guidestar_lens.py  language_lens.py  llm_recorder.py  positional_viewer.html  prism.py  scan_log.txt  signal_processor.py  spectral_auditor.py
css/: styles.css
docs/: gitgalaxy_architecture_brief.md  gitgalaxy_code_specs_v51 (copy).odt  gitgalaxy_code_specs_v51_SHORT.odt  gitgalaxy_code_specs_v51_shortest.odt  languages.ods  regex_prompt_current.odt
gitgalaxy/: README.md  analysis_lens.py  aperture.py  audit_recorder.py  chronometer.py  cobol_refractor_controller.py  cobol_to_java_controller.py  detector.py  galaxyscope.py  gitgalaxy_config.py  gitgalaxy_standards_v011.py  gitgalaxy_standards_v1.py  gpu_recorder.py  guidestar_lens.py  language_lens.py  language_standards.py  licensing.py  llm_recorder.py  prism.py  record_keeper.py  requirements.txt  security_auditor.py  security_lens.py  signal_processor.py  spectral_auditor.py
js/: main.js
museum-of-code/: index.html
search/: search_index.json
site/: 404.html  README.md  app.py  data  index.html  sitemap.xml
(+1120 files in other folders)
