[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitgalaxy"
version = "1.1.5"
authors = [
  { name="Joe Esquibel" },
]
description = "A high-speed static analysis engine that sequences source code like DNA to map architectural risk and security threats."
readme = "README.md"
requires-python = ">=3.8"

# THE FIX: Point directly to the file instead of using the deprecated dictionary table.
# This clears the first massive Setuptools warning.
license-files = ["LICENSE"] 

keywords = [
    "static-analysis", 
    "security", 
    "threat-hunting", 
    "visualization", 
    "ast", 
    "zero-trust",
    "webgpu",
    "architecture"
]

# THE FIX: Removed the deprecated "License :: Other/Proprietary License" classifier.
# This clears the second massive Setuptools warning.
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]

dependencies = []

[project.urls]
"Homepage" = "https://gitgalaxy.io"
"Documentation" = "https://squid-protocol.github.io/gitgalaxy/"
"Source" = "https://github.com/squid-protocol/gitgalaxy"
"Tracker" = "https://github.com/squid-protocol/gitgalaxy/issues"

[project.scripts]
# THE RENAME: Updated the CLI command from 'galaxyscope' to 'blast' 
# to align with your new engine branding.
blast = "gitgalaxy.galaxyscope:main" 

[tool.setuptools.packages.find]
include = ["gitgalaxy*"]
