[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitgalaxy"
version = "1.1.6"
authors = [
  { name="Joe Esquibel" },
]
description = "A high-speed static analysis engine that sequences source code like DNA to map architectural risk and security threats."
readme = "README.md"
requires-python = ">=3.8"

license-files = ["LICENSE"] 

keywords = [
    "static-analysis", 
    "security", 
    "threat-hunting", 
    "visualization", 
    "ast", 
    "zero-trust",
    "webgpu",
    "architecture"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]

dependencies = []

[project.urls]
"Homepage" = "https://gitgalaxy.io"
"Documentation" = "https://squid-protocol.github.io/gitgalaxy/"
"Source" = "https://github.com/squid-protocol/gitgalaxy"
"Tracker" = "https://github.com/squid-protocol/gitgalaxy/issues"

[project.scripts]
blast = "gitgalaxy.galaxyscope:main" 

# --- THE FIX: Explicitly allow only the package, block the heavy folders ---
[tool.setuptools.packages.find]
include = ["gitgalaxy", "gitgalaxy.*"]
exclude = [
    "archive*", 
    "airgap_observatory*", 
    "docs*", 
    "docs_build*", 
    "site*", 
    "updated_results*", 
    "utilities*"
]
