[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitgalaxy"
dynamic = ["version"]
authors = [
  { name="Joe Esquibel" },
]
description = "An AST-free, LLM-free zero-trust static analysis engine for mapping architectural risk, securing CI/CD pipelines, and modernizing legacy monoliths."
readme = "README.md"
requires-python = ">=3.9"

keywords = [
    "static-analysis", 
    "security", 
    "devsecops", 
    "visualization", 
    "ast", 
    "zero-trust",
    "sbom",
    "legacy-migration"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]

dependencies = [
    "PyYAML>=6.0"
]

[project.urls]
"Homepage" = "https://gitgalaxy.io"
"Documentation" = "https://squid-protocol.github.io/gitgalaxy/"
"Source" = "https://github.com/squid-protocol/gitgalaxy"
"Tracker" = "https://github.com/squid-protocol/gitgalaxy/issues"

[project.scripts]
# --- THE HUB (Core Orchestrators) ---
galaxyscope = "gitgalaxy.galaxyscope:main" 
blast = "gitgalaxy.galaxyscope:main"

# --- THE SPOKES (DevSecOps Tooling) ---
vault-sentinel = "gitgalaxy.tools.supply_chain_security.vault_sentinel:main"
supply-chain-firewall = "gitgalaxy.tools.supply_chain_security.supply_chain_firewall:main"
xray-inspector = "gitgalaxy.tools.supply_chain_security.binary_anomaly_detector:main"
zero-trust-sbom = "gitgalaxy.tools.compliance.sbom_generator:main"
pii-leak-hunter = "gitgalaxy.tools.terabyte_log_scanning.pii_leak_hunter:main"
terabyte-log-scanner = "gitgalaxy.tools.terabyte_log_scanning.terabyte_log_scanner:main"
api-network-map = "gitgalaxy.tools.network_auditing.full_api_network_map:main"

# --- THE SPOKES (Legacy Modernization Controllers) ---
cobol-refractor = "gitgalaxy.cobol_refractor_controller:main"
cobol-to-java = "gitgalaxy.cobol_to_java_controller:main"
batch-test-harness = "gitgalaxy.tools.cobol_to_java.batch_test_harness:main"

# --- THE SPOKES (Individual Legacy Forges) ---
cobol-compiler-forge = "gitgalaxy.tools.cobol_to_cobol.cobol_compiler_forge:main"
cobol-dag-architect = "gitgalaxy.tools.cobol_to_cobol.cobol_dag_architect:main"
cobol-etl-unpacker = "gitgalaxy.tools.cobol_to_cobol.cobol_etl_unpacker:main"
cobol-graveyard-finder = "gitgalaxy.tools.cobol_to_cobol.cobol_graveyard_finder:main"
cobol-jcl-forge = "gitgalaxy.tools.cobol_to_cobol.cobol_jcl_forge:main"
cobol-microservice-slicer = "gitgalaxy.tools.cobol_to_cobol.cobol_microservice_slicer:main"
cobol-schema-forge = "gitgalaxy.tools.cobol_to_cobol.cobol_schema_forge:main"
cobol-system-limits = "gitgalaxy.tools.cobol_to_cobol.cobol_system_limits_reporter:main"


# --- THE FIX: Explicitly allow only the package, block the heavy folders ---
[tool.setuptools.packages.find]
include = ["gitgalaxy", "gitgalaxy.*"]
exclude = [
    "archive*", 
    "airgap_observatory*", 
    "docs*", 
    "docs_build*", 
    "site*", 
    "updated_results*", 
    "utilities*"
]

[tool.setuptools_scm]
# This tells it to expect tags like "v2.0.5" instead of just "2.0.5"
tag_regex = '^v?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'

[tool.black]
line-length = 120

[tool.ruff]
# Ignore legacy/messy fixture code so it doesn't pollute linting results
exclude = [
    "tests/fixtures/*",
]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "smoke: quick core engine tests for CI/CD pipelines",
]
norecursedirs = ["tests/fixtures"]